[tool.poetry]
name = "hackerrank"
version = "0.1.0"
description = ""
authors = ["himkt <himkt@klis.tsukuba.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
python-language-server = "^0.36.2"
mypy = "^0.800"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
